test/domains/compilerErrors/notsupportedStridable-ok.chpl
use notsupportedCommon;

writeln(dfltRectangularBase.stridable);
//writeln(dfltAssociativeBase.stridable);
writeln(DistributedBase.stridable);
writeln(dfltRectangularSubdomain.stridable);
//writeln(dfltAssociativeSubdomain.stridable);
writeln(DistributedSubdomain.stridable);
writeln(dfltRectangularSparseSub.stridable);
//writeln(dfltAssociativeSparseSub.stridable);
writeln(DistributedSparseSub.stridable);
